# 5_Working-with-PostgreSQL-from-C-

./: .gitignore  CMakeLists.txt  README.md  class_sql.cpp  class_sql.h  main.cpp
